refactor: объявить поле Set<Task>prioritizedTasks в классе InMemoryTaskManager обновлять это поле при вызове методов добавления, обновления и удаления задач изменить тип возвращаемого значения метода getPrioritizedTasks() на List исправить тесты с учетом изменений